01-21-2013 - Ryan Kelley 
	* added d0/dz/ip3d + errors 

11-14-2012 - Ryan Kelley 
	* nFOmus/nFOels were set to 2011 values --> changed to 2012 values 

11-13-2012 - Ryan Kelley 
	* added branches for HLT_RelIso1p0Mu20_v trigger
	* added branches for dataset, filename and is_real_data
	* Ian added some branches for the TTV analysis fake rate

05-20-2012 - Ryan Kelley 
	* updated jets to use residiual corrections 

05-10-2012 - Ryan Kelley 
	* commented obselete isolation methods
	* removed extra loops over pfcandidate -- using what's stored in ntuple

05-06-2012 - Ryan Kelley 
	* tagged with FakeRates06May2012
	* updated effective area for electrons
	* added branches for correcte pfiso

05-01-2012 - Ryan Kelley 
	* tagged with FakeRates01May2012
	* cleaned up isolation branches to remove truncated isolation (all variables are now not truncated)
	* removed nt_ prefix from pfiso and radiso branchses
	* added effective area for muons

04-29-2012 - Ryan Kelley 
	* tagged with FakeRates29April2012v2
	* added branches for radial isolation (both muons and electrons) 

04-25-2012 - Ryan Kelley 
	* tagged with FakeRates25April2012
	* fixed bug with  HLT_ele17_CaloIdT_CaloIsoVL_TrkIdVL_TrkIsoVL_Jet30_v* regulare expression
	* added L1 prescale for 2012 Electron triggers

04-22-2012 - Ryan Kelley 
	* tagged with FakeRates22April2012
	* Added nt_pfiso03/04 with barrel vetoes set (electrons only)

04-20-2012 - Ryan Kelley 
	* tagged with FakeRates20April2012
	* Added verbose option to printout current file
	* Fixed bug with running on a subset of the events 

04-19-2012 - Ryan Kelley 
	* tagged with FakeRates19April2012
    * Added option for to run on a subset of the data (SetNumEvents) 
    * Verified HLT and L1 prescale variables are working
	* Added more printout

04-17-2012 - Ryan Kelley 
    * Added more triggers
        - HLT_IsoMu24_eta2p1_v* 
        - HLT_IsoMu30_eta2p1_v*
        - HLT_Ele27_WP80_v*